--- a/PlayerWeb/www/css/index/index_main.less
+++ b/PlayerWeb/www/css/index/index_main.less
@@ -14,3 +14,4 @@
 @import "styles/row-height-1 -- row_height.less";
 @import "iframe-outer.less";
 @import "styles/iframe-size -- iframe_sizing.less";
+@import "styles/d-margins -- margins.less";
