--- a/PlayerWeb/www/css/index_main.less.css
+++ b/PlayerWeb/www/css/index_main.less.css
@@ -421,3 +421,27 @@ body#afui .splt {
     min-height: 100px;
   }
 }
+[data-uib="media/iframe"] > iframe {
+  width: 100%;
+  height: 100%;
+}
+@media all {
+  .iframe-size {
+    width: 100%;
+  }
+}
+@media all {
+  .wrapping-col > .d-margins,
+  .wrapping-col > .afScrollPanel > .d-margins {
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+  .wrapping-col > .d-margins,
+  .wrapping-col > .afScrollPanel > .d-margins {
+    margin-left: 6px;
+    margin-right: 6px;
+  }
+  .d-margins {
+    margin-bottom: 10px;
+  }
+}
